# srt-live-server

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  example_streamids.json  sls.conf  srt-live-server.cpp
.github/actions/docker-build/: action.yml
.github/workflows/: release.yml
docs/: DYNAMIC_LATENCY.md
slscore/: SLSApiServer.cpp  SLSApiServer.hpp  SLSDatabase.cpp  SLSDatabase.hpp  SLSListener.cpp  SLSListener.hpp  SLSManager.cpp  SLSManager.hpp  SLSPublisher.cpp  SLSPublisher.hpp  SLSRole.cpp  SLSRole.hpp  SLSSrt.cpp  SLSSrt.hpp  StreamIdMapper.cpp  StreamIdMapper.hpp  common.cpp  conf.cpp  version.hpp
src/: CMakeLists.txt  sls.conf  srt-live-client.cpp  srt-live-server.cpp
src/core/: CMakeLists.txt  SLSEndpointManager.cpp  SLSEndpointManager.hpp  SLSGroup.cpp  SLSListener.cpp  SLSManager.cpp  SLSManager.hpp  SLSMapPublisher.cpp  SLSMapPublisher.hpp  SLSRelay.cpp  SLSRole.cpp  SLSRole.hpp  SLSSrt.hpp  SLSThread.cpp  conf.cpp  conf.hpp
